syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package users;

message CurrentAccount {
  string id = 1;
  double value = 2;
  Symbol symbol = 3;
}

message User {
  string id = 1;
  string name = 2;
  string surname = 3;
  string email = 4;
  string iban = 5;
  CurrentAccount eurCurrentAccount = 6;
  CurrentAccount usdCurrentAccount = 7;
}

enum Symbol {
  EUR = 0;
  USD = 1;
}

enum Operation {
  DEPOSIT = 0;
  WITHDRAW = 1;
  BUY_DEPOSIT = 2;
  BUY_WITHDRAW = 3;
}

message SignupRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  string surname = 4;
  string iban = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  User user = 2;
}

message MeRequest {
  string token = 1;
}

message DepositRequest {
  string userId = 1;
  double value = 2;
  Symbol symbol = 3;
}

message WithdrawRequest {
  string userId = 1;
  double value = 2;
  Symbol symbol = 3;
}

message BuyRequest {
  string userId = 1;
  Symbol from_symbol = 2;
  double value = 3;
}

message BuyResponse {
  double value = 1;
  Symbol to_symbol = 2;
}


message Transaction {
  string id = 1;
  double value = 2;
  Symbol symbol = 3;
  google.protobuf.Timestamp date = 4;
  Operation operation = 5;
}

message ListTransactionsRequest {
  string userId = 1;
  repeated google.protobuf.Timestamp date = 2;
  repeated Symbol currency = 3;
}

message ListTransactionsResponse {
  repeated Transaction transactions = 1;
}

service UsersService {
  rpc Signup(SignupRequest) returns (google.protobuf.Empty);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Me(MeRequest) returns (User);
  rpc Deposit(DepositRequest) returns (google.protobuf.Empty);
  rpc Withdraw(WithdrawRequest) returns (google.protobuf.Empty);
  rpc Buy(BuyRequest) returns (BuyResponse);
  rpc ListTransactions(ListTransactionsRequest) returns (ListTransactionsResponse);
}